upgrade basic api