@@ -1,22 +1,22 @@
 package org.camphub.be_camphub.mapper;
 
-import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.camphub.be_camphub.dto.request.dispute.DisputeCreationRequest;
 import org.camphub.be_camphub.dto.response.dispute.DisputeResponse;
 import org.camphub.be_camphub.entity.Dispute;
+import org.camphub.be_camphub.entity.MediaResource;
+import org.camphub.be_camphub.enums.MediaType;
 import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 
-import com.fasterxml.jackson.core.type.TypeReference;
-import com.fasterxml.jackson.databind.ObjectMapper;
-
 @Mapper(componentModel = "spring")
 public interface DisputeMapper {
-    @Mapping(target = "damageTypeName", source = "damageType.name")
-    @Mapping(target = "compensationRate", source = "damageType.compensationRate")
-    @Mapping(target = "evidenceUrls", expression = "java(parseEvidenceUrls(dispute.getEvidenceUrls()))")
+    @Mapping(target = "damageTypeName", ignore = true)
+    @Mapping(target = "compensationRate", ignore = true)
+    @Mapping(target = "evidenceUrls", expression = "java(parseEvidenceUrls(dispute.getEvidences()))")
     DisputeResponse entityToResponse(Dispute dispute);
 
     @Mapping(target = "id", ignore = true)
@@ -29,27 +29,33 @@ public interface DisputeMapper {
     @Mapping(target = "adminId", ignore = true)
     @Mapping(target = "resolvedAt", ignore = true)
     @Mapping(target = "createdAt", expression = "java(java.time.LocalDateTime.now())")
-    @Mapping(target = "evidenceUrls", expression = "java(toEvidenceJson(request.getEvidenceUrls()))")
-    @Mapping(target = "damageType", ignore = true) // sẽ set ở service
+    @Mapping(target = "evidences", expression = "java(toMediaResources(request.getEvidenceUrls()))")
+    @Mapping(target = "damageTypeId", ignore = true) // sẽ set ở service
+    @Mapping(target = "description", source = "note")
     Dispute creationRequestToEntity(DisputeCreationRequest request);
 
-    default List<String> parseEvidenceUrls(String json) {
-        if (json == null || json.isBlank()) return List.of();
-        try {
-            ObjectMapper mapper = new ObjectMapper();
-            return mapper.readValue(json, new TypeReference<>() {});
-        } catch (Exception e) {
-            return Arrays.asList(json.split(","));
-        }
+    default List<String> parseEvidenceUrls(List<MediaResource> evidences) {
+        if (evidences == null) return Collections.emptyList();
+        return evidences.stream()
+                .map(MediaResource::getUrl)
+                .collect(Collectors.toList());
     }
 
-    default String toEvidenceJson(List<String> urls) {
-        if (urls == null || urls.isEmpty()) return null;
-        try {
-            ObjectMapper mapper = new ObjectMapper();
-            return mapper.writeValueAsString(urls);
-        } catch (Exception e) {
-            return String.join(",", urls);
-        }
+
+    default List<MediaResource> toMediaResources(List<String> urls) {
+        if (urls == null || urls.isEmpty()) return List.of();
+        return urls.stream()
+                .map(url -> {
+                    // Đoán type dựa trên phần mở rộng
+                    String lower = url.toLowerCase();
+                    MediaType type = (lower.endsWith(".mp4") || lower.endsWith(".mov") || lower.endsWith(".avi"))
+                            ? MediaType.VIDEO
+                            : MediaType.IMAGE;
+                    return MediaResource.builder()
+                            .url(url)
+                            .type(type)
+                            .build();
+                })
+                .toList();
     }
 }
